--- a/17363272849684.md
+++ b/17363272849684.md
@@ -12,7 +12,7 @@
 *  基于商户的信息,为Sass系统的优迭代提供支撑,同时为后续运营业务发展方向提供支持 
 ## 2.2 通用需求说明
 * 原型地址:https://5owod3.axshare.com/?code=b34d0bc16f16356c67ffc3290577c15e&id=jd7s1b&g=14
-* 文档地址:
+* 文档地址:https://github.com/Maike0418/-/blob/main/17363272849684.mdßßßß
 * 系统所有的列表字段及查询条件参见原型,本文档中不一一列举,本文档只对重点字段进行说明,对功能进行逻辑说明.
 * 原型中所有的红色边框输入框,或者字段名称前有<a style="color: red;"> * </a> 表示为必填项.
 * 原型中所有输入框如果背景为灰色,则表示该输入框不可编辑.
