--- a/17363272849684a.md
+++ b/17363272849684a.md
@@ -351,7 +351,7 @@
 * 删除: 只有已关盘状态的列表可删除, 删除给出二次弹窗提示,确认是否删除, 确认后, 删除列表信息.
 ## 4.3 游戏管理
 ### 4.3.1 游戏类型管理
-![Snipaste_2025-01-13_20-25-28](https://github.com/Maike0418/Maike0418/blob/main/Snipaste_2025-01-13_20-25-28.png)
+![Snipaste_2025-01-13_20-25-28]([游戏类型管理](https://github.com/Maike0418/SassPictures/blob/main/%E6%B8%B8%E6%88%8F%E7%B1%BB%E5%9E%8B%E7%AE%A1%E7%90%86.png))
 
 * 列表的数据来源:从游戏分发平台获取
 * 列表重要字段说明: 
