--- a/Sass管理系统需求文档20250115V1.0.md
+++ b/Sass管理系统需求文档20250115V1.0.md
@@ -11,8 +11,8 @@
 *  Sass管理系统主要是用来快捷的商户开盘,同时提供 商户管理,商户会员管理,商户游戏管理及相关第三方服务信息. 
 *  基于商户的信息,为Sass系统的优迭代提供支撑,同时为后续运营业务发展方向提供支持 
 ## 2.2 通用需求说明
-* 原型地址:https://5owod3.axshare.com/?code=b34d0bc16f16356c67ffc3290577c15e&id=jd7s1b&g=14
-* 文档地址:https://github.com/Maike0418/-/blob/main/17363272849684.md
+* 原型地址:https://5owod3.axshare.com/?code=b34d0bc16f16356c67ffc3290577c15e&id=jd7s1b&g=14](https://4h7jjv.axshare.com/?code=5b3fbbb278f18b78170695d0b9a16eb9&id=e63rmd&g=14
+* 文档地址:https://github.com/Maike0418/-/blob/main/17363272849684.md](https://github.com/Maike0418/Requirements_Doc/edit/main/Sass%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F%E9%9C%80%E6%B1%82%E6%96%87%E6%A1%A320250115V1.0.md
 * 系统所有的列表字段及查询条件参见原型,本文档中不一一列举,本文档只对重点字段进行说明,对功能进行逻辑说明;
 * 原型中所有的红色边框输入框,或者字段名称前有<a style="color: red;"> * </a> 表示为必填项;
 * 原型中所有输入框如果背景为灰色,则表示该输入框不可编辑;
