--- a/Sass管理系统精简版需求文档20250115V1.0.md
+++ b/Sass管理系统精简版需求文档20250115V1.0.md
@@ -77,6 +77,7 @@
         + 如果游戏类型英文名称格式不正确,则提示游戏英文名称格式错误,
         + 验证通过,弹窗关闭,更新列表信息.
 ### 3.1.2 游戏厂商管理
+![游戏厂商管理](https://github.com/Maike0418/SassPictures/blob/main/yxcsgl.png)
 * 列表的数据来源:从游戏分发平台获取
 * 列表重要字段说明: 
     - 厂商ID: 厂商的唯一凭证,不可重复
@@ -94,6 +95,7 @@
         + 如果厂商全称格式错误,则提示厂商全称格式错误.
         + 验证通过,弹窗关闭,更新列表信息.
 ### 3.1.3 游戏集成商管理
+![游戏集成商管理](https://github.com/Maike0418/SassPictures/blob/main/yxjcsgl.png)
 * 列表的数据来源:从游戏分发平台获取
 * 集成商名词解释: 可以提供多个原厂游戏接入的公司, 也称作游戏渠道商.
 * 列表重要字段说明: 
@@ -112,6 +114,7 @@
         + 如果集成商全称格式错误,则提示集成商全称格式错误.
         + 验证通过,弹窗关闭,更新列表信息.
 ### 3.1.4 游戏列表
+![游戏列表](https://github.com/Maike0418/SassPictures/blob/main/yxlb.png)
 * 列表的数据来源:从游戏分发平台获取
 * 列表重要字段说明: 
     - 游戏ID: 厂商提供的游戏的唯一凭证,
