--- a/Sass管理系统精简版需求文档20250115V1.0.md
+++ b/Sass管理系统精简版需求文档20250115V1.0.md
@@ -141,6 +141,7 @@
         + 如果游戏编号重复,则提示游戏编号重复.
         + 验证通过,弹窗关闭,更新列表信息.
 ### 3.1.5 游戏对接配置
+![游戏对接配置](https://github.com/Maike0418/SassPictures/blob/main/yxdjpz.png)
 * 列表的数据来源: 通过新增获取.
 * 列表重要字段说明: 
     - 配置名称: 中文描述该配置项的名称.
@@ -164,7 +165,7 @@
     -  其他编辑逻辑参见新增.
 ## 3.2 费率管理
 * 本功能主要用来对下游商户进行各种不同类型的抽点费率设置及上游集成接入后给我方的游戏费率配置.
-### 3.2.1 游戏月费率管理
+### 3.2.1 商户月费率管理
 * 功能说明: 对商户按游戏类型盈利月抽点的费用模版配置.
 * 主要字段说明: 
     - 模版名称: 费率模版的唯一标识, 模版名称不可重复
@@ -204,7 +205,7 @@
         + 如果本行数据为空或者默认数据,则直接删除. 
         + 如果本行数据已有数值为编辑模式,或者保存模式,则给出二次确认弹窗, 是否删除本条数据,删除后费率模版将重新生效, 确认后,删除该条数据, 新费率模版开始生效. 
         + 只有一行数据时,无删除操作.       
-### 3.2.2 预付费率管理
+### 3.2.2 商户预付费率管理
 * 功能说明: 本功能时用来配置需要预先支付抽点费用的佣金模版.
 * 主要字段说明: 
     - 最低预付款: 商户需要最预存的抽点金额, 币种单位与系统相同. 
@@ -292,7 +293,7 @@
         + 如果本行数据为空或者默认数据,则直接删除. 
         + 如果本行数据已有数值为编辑模式,或者保存模式,则给出二次确认弹窗, 是否删除本条数据,删除后费率模版将重新生效, 确认后,删除该条数据, 新费率模版开始生效. 
         + 只有一行数据时,无删除操作.       
-### 3.2.4 游戏预付费率管理
+### 3.2.4 集成商预付费率管理
 * 功能说明: 本功能时用来配置需要预先支付抽点费用的佣金模版.
 * 主要字段说明: 
     - 最低预付款: 商户需要最预存的抽点金额, 币种单位与系统相同. 
