--- a/Sass管理系统精简版需求文档20250115V1.0.md
+++ b/Sass管理系统精简版需求文档20250115V1.0.md
@@ -47,8 +47,8 @@
 * 集成游戏商: 可以提供多个原厂游戏接入的公司, 也称作游戏渠道商.
 * 开盘费:新建商户时,向商户收取的开盘押金.
 * 维护费:每月向商户收取的服务器维护费用. 
-* 月盈利抽点: 每月根据商户的游戏盈利情况,向商户抽取的佣金比例.
-* 游戏预付费: 商户预存抽点费用, 游戏过程时时计算,根据佣金比例计算并扣减预存费用.
+* 月盈利抽点: 也称作月游戏抽点,每月根据商户的游戏盈利情况,向商户抽取的佣金比例.
+* 商户预付费: 商户预存抽点费用, 游戏过程时时计算,根据佣金比例计算并扣减预存费用.
 * 混合收费: 商户即采用了月盈利抽点,有采用了游戏预付费抽点.
 * API抽点: 商户只做API接入,每月根据商户的游戏盈利情况,向商户抽取的佣金比例.
 * 三方服务信息: 除了我方提供的主要服务或者合作服务外,商户自行提供的三方服务商,如支付, 短信等商户自己提供的服务商.
