--- a/Sass管理系统精简版需求文档20250115V1.0.md
+++ b/Sass管理系统精简版需求文档20250115V1.0.md
@@ -150,15 +150,14 @@
 * 新增:
     - 主要字段说明:
         + 配置名称: 必填项, 一般输入中文即可.
-        + confingKey:必填项, 尽显输入英文字母,数字,常规符号.
+        + confingKey:必填项, 仅限输入英文字母,数字,常规符号.
         + 值类型:必填项, 下拉选择,从技术获取,常见的字符类型.
         + Value: 根据值类型,输入对应的结果.
-        + 密码: 至少6位数字或英文字母,常见符号.    
     - 点击保存:
         + 如果配置名称为空:则提示请输入配置名称.
         + 如果confingKey为空,则提示请输入confingKey.
         + 如果值类型为空,则提示请选择值类型.
-        + 如果Value为空,则提示请输入Value.
+        + 如果Value为空,则提示请输入Value,
         + 验证通过,关闭弹窗,保存所有信息到列表.
 * 编辑:
     -  回填所有信息,
