--- a/Sass管理系统精简版需求文档20250115V1.0.md
+++ b/Sass管理系统精简版需求文档20250115V1.0.md
@@ -103,23 +103,32 @@
     - 集成商名称: 厂商全名. 
     - 简称: 简化后的集成商名字
 * 列表排序: 根据更新时间倒序排序
+* 新增: 
+    - 游戏集成商全称:  必填项, 可输入汉字,字母,英文,数字,常规符号或组合.
+    - 游戏厂商简称: 必填项, 可输入英文,数字,常规符号或组合.   
+    - 点击保存: 
+        + 如果集成商全称为空,则提示集成商全称不能为空.
+        + 如果集成商全称格式错误,则提示集成商全称格式错误.
+        + 如果集成商简称格式错误,则提示集成商简称格式错误,仅限输入字母,数字,常规符号或组合.
+        + 验证通过,弹窗关闭,更新列表信息. 系统自动生成集成商ID.
 * 更新游戏集成商: 点击后从分发平台从新获取新的集成商ID信息,或新增列表信息,
 * 编辑:
     -  集成商ID回填不可编辑,
     -  其他信息依次回填,
-    -  集成商全称: 必填,仅限输入英文字母,数字,汉子,和常规符号.
-    -  集成商简称:选填.
+    -  集成商全称: 必填,仅限输入汉字,英文字母,数字,汉子,和常规符号.
+    -  集成商简称: 必填项, 可输入英文,数字,常规符号或组合. 
     -  点击保存:
         + 如果集成商全称为空,则提示集成商全称不能为空.
         + 如果集成商全称格式错误,则提示集成商全称格式错误.
+        + 如果集成商简称格式错误,则提示集成商简称格式错误,仅限输入字母,数字,常规符号或组合.
         + 验证通过,弹窗关闭,更新列表信息.
 ### 3.1.4 游戏列表
 ![游戏列表](https://github.com/Maike0418/SassPictures/blob/main/yxlb.png)
 * 列表的数据来源:从游戏分发平台获取
 * 列表重要字段说明: 
     - 游戏ID: 厂商提供的游戏的唯一凭证,
-    - 游戏编号: 我方接入的游戏唯一凭证,不可重复,格式为 游戏集成商_游戏厂商_游戏类型_游戏编号, 如 AWC_PG_Solt_001
-    - 游戏名称: 统一采用英文游戏名称
+    - 游戏编号: 我方接入的游戏唯一凭证,不可重复,格式为 游戏集成商(简称)_游戏厂商_游戏类型_游戏编号, 如 AWC_PG_Solt_001
+    - 游戏名称: 游戏厂商给的原始游戏名称,有英文则优先展示英文,无则展示厂商给的默认游戏名称.
     - 游戏状态: 
         + 正常: 正常使用中的游戏,
         + 维护中: 游戏处于维护状态,前端无法进入.
