--- a/Sass管理系统精简版需求文档20250115V1.0.md
+++ b/Sass管理系统精简版需求文档20250115V1.0.md
@@ -192,7 +192,7 @@
 * 模版内容配置:
     - 重要字段说明: 
         + 游戏集成商: 下拉选择, 从游戏管理,集成商列表中获取.
-        + 游戏类型: 下拉选择,根据选择的游戏厂商,关联显示游戏类型, 关联关系从分发平台获取.
+        + 游戏类型: 下拉选择,根据分发平台返回,从游戏类型列表中获取.
         + 游戏厂商: 下拉选择, 可以多选,根据选择的游戏类型关联显示游戏厂商下拉选项, 关联关系从分发平台获取.
         + 币种: 取sass系统货币单位.
         + 盈利金额(一阶段): 起始数值~结束数值, 必填项,仅限输入,正数字,小数, 单位(万), 结束数值需>开始数值, 计算时结束数值为小于等于.
@@ -331,7 +331,7 @@
 * 模版内容配置:
     - 重要字段说明: 
         + 游戏集成商: 从上方集成商选择结果获取.
-        + 游戏类型: 下拉选择,根据选择的游戏厂商,关联显示游戏类型, 关联关系从分发平台获取.
+        + 游戏类型: 下拉选择,根据分发平台返回,从游戏类型列表中获取.
         + 游戏厂商: 下拉选择, 可以多选,根据选择的游戏类型关联显示游戏厂商下拉选项, 关联关系从分发平台获取.
         + 币种: 取sass系统货币单位.
         + 盈利金额(一阶段): 起始数值~结束数值, 必填项,仅限输入,正数字,小数, 单位(万), 结束数值需>开始数值, 计算时结束数值为小于等于.
