--- a/Sass管理系统精简版需求文档20250115V1.0.md
+++ b/Sass管理系统精简版需求文档20250115V1.0.md
@@ -82,14 +82,14 @@
 * 列表重要字段说明: 
     - 厂商ID: 厂商的唯一凭证,不可重复
     - 厂商名称: 厂商全名. 
-    - 厂商简称: 简化后的厂商名字
+    - 厂商简称: 简化后的厂商名字.
 * 列表排序: 根据创建时间倒序排序
 * 更新游戏厂商: 点击后从分发平台从新获取类型ID,和新的厂商ID和列表信息,
 * 编辑:
     -  厂商ID回填不可编辑,
     -  其他信息依次回填,
     -  厂商全称: 必填,仅限输入英文字母,数字,汉子,和常规符号.
-    -  厂商简称:选填.
+    -  厂商简称:必填.
     -  点击保存:
         + 如果厂商全称为空,则提示厂商全称不能为空.
         + 如果厂商全称格式错误,则提示厂商全称格式错误.
@@ -127,7 +127,7 @@
 * 列表的数据来源:从游戏分发平台获取
 * 列表重要字段说明: 
     - 游戏ID: 厂商提供的游戏的唯一凭证,
-    - 游戏编号: 我方接入的游戏唯一凭证,不可重复,格式为 游戏集成商(简称)_游戏厂商_游戏类型_游戏编号, 如 AWC_PG_Solt_001
+    - 游戏编号: 我方接入的游戏唯一凭证,不可重复,格式为 游戏集成商(简称)_游戏厂商(简称)_游戏类型_游戏编号, 如 AWC_PG_Solt_001
     - 游戏名称: 游戏厂商给的原始游戏名称,有英文则优先展示英文,无则展示厂商给的默认游戏名称.
     - 游戏状态: 
         + 正常: 正常使用中的游戏,
