--- a/Sass管理系统精简版需求文档20250115V1.0.md
+++ b/Sass管理系统精简版需求文档20250115V1.0.md
@@ -64,15 +64,15 @@
 * 列表重要字段说明: 
     - 类型ID: 类型的唯一凭证,不可重复
     - 类型英文名称: 通用型类型名称, 不能为空.
-    - 类型中文名称: 类型的汉字名称,
+    - 关联游戏厂商: 通过编辑勾选厂商获取数据, 表示有哪些厂商提供该类型的游戏.
 * 列表排序: 根据创建时间倒序排序
 * 更新游戏类型: 点击后从分发平台从新获取类型ID,和新的类型列表信息,
 * 编辑:
     -  游戏类型ID回填不可编辑
     -  其他信息依次回填.
     -  游戏英文名称: 必填,仅限输入英文字母,数字,常规符号.
-    -  游戏中文名称:选填
-    -  点击保存:
+    -  游戏中文名称:选填 
+    -  关联厂商: 选填, 多选, 游戏厂商简写按照字母顺序排序.
         + 如果游戏类型英文名称为空,则提示请输入游戏英文名称.
         + 如果游戏类型英文名称格式不正确,则提示游戏英文名称格式错误,
         + 验证通过,弹窗关闭,更新列表信息.
