--- a/Sass管理系统精简版需求文档20250115V1.0.md
+++ b/Sass管理系统精简版需求文档20250115V1.0.md
@@ -368,7 +368,8 @@
     - 游戏抽点: 根据当前商户使用的费率模版,和盈利USDT,展示抽点比例. 
     - 抽点费用: 盈利USDT金额 *  游戏抽点的计算结果, 单位:Sass系统结算单位.
     - 生成时间: 该报表的最后生成时间.
-* 列表排序: 以商户为单位,按照报表生成时间,倒序排序. 
+* 列表排序: 以商户为单位,按照报表生成时间,倒序排序.
+* 账单计算规则: 按照游戏类型和厂商汇总商户的总盈利USDT, 根据规则表,判断处于哪个抽点阶段, 进行抽点金额计算, 如果满足最高阶段,则以无论盈利金额是否超过最高阶段的额度,都按最高阶段的抽点数计算. 比如只设置1阶段,则无论盈利是否超过1阶段的最大额,都按1阶段算. 
 * 账单生成日期: 每月1号, 后台运行,定时任务,通过商户抽点报表, 统计商户每个游戏类型,每个投注币种盈利金额,根据商户抽点模版规则,计算出商户账单.
 * 商户账单计算示例:  
     - 预设系统结算币种为USDT, 预设商户A, 使用月抽点默认模版, 模版如下表  
@@ -403,7 +404,8 @@
     - 游戏抽点: 根据当前商户使用的费率模版,和盈利USDT,展示抽点比例. 
     - 扣减费用: 报表生成时段内,盈利USDT金额 *  游戏抽点的计算结果, 单位:Sass系统结算单位.
     - 生成时间: 该报表的最后生成时间.
-* 列表排序: 以商户为单位,按照报表生成时间,倒序排序. 
+* 账单生成粒度: 根据技术设定的时间段,每个时间段结束后, 通过商户预付抽点报表, 统计商户每个游戏类型,每个投注币种盈利金额,根据商户抽点模版规则,计算出商户账单.
+* 账单计算规则: 按照游戏类型和厂商汇总商户的总盈利USDT, 根据规则表,判断处于哪个抽点阶段, 进行抽点金额计算, 如果满足最高阶段,则以无论盈利金额是否超过最高阶段的额度,都按最高阶段的抽点数计算. 比如只设置1阶段,则无论盈利是否超过1阶段的最大额,都按1阶段算. 
 * 商户账单计算示例:  
     - 预设系统结算币种为USDT, 预设商户A, 预存4000U, 账单每10分钟生成一次 , 使用月抽点默认模版, 模版如下表  
         | 游戏集成商 | 游戏类型 | 厂家 | 投注额(USDT) | 费用比例(%) |
