--- a/Sass管理系统报表版块需求说明20250126V1.0.md
+++ b/Sass管理系统报表版块需求说明20250126V1.0.md
@@ -59,6 +59,7 @@
 # 3. 报表版块
 ## 3.1 平台报表
 ### 3.1.1 Sass平台报表
+![Sass平台报表](https://github.com/Maike0418/SassPictures/blob/main/sassptbb.png)
 * 功能说明:用来统计本Sass平台所开设的商户和商户的基本运营信息.
 * 统计数据源: 可以从平台商户报表中统计Sass平台所要的数据.
 * 主要查询条件说明: 
