--- a/Sass管理系统报表版块需求说明20250126V1.0.md
+++ b/Sass管理系统报表版块需求说明20250126V1.0.md
@@ -91,6 +91,7 @@
     - 月报表:每月1号凌晨后,系统运行定时任务(具体时间由技术确定),统计上月1号00:00:00~月最后一天23:59:59的数据, 定时任务完成后,生成上月的报表数据 .为数据为0 ,则展示0. 
     - 年报表:每年1月1日号凌晨后,系统运行定时任务(具体时间由技术确定),统计上年1月1号00:00:00~12月31号23:59:59的数据, 定时任务完成后,生成上年的报表数据 .为数据为0 ,则展示0. 
 ### 3.1.2 平台商户报表
+![平台商户报表](https://github.com/Maike0418/SassPictures/blob/main/ptshbb.png)
 * 功能说明:以平台下商户为维度,按商户统计基本数据信息和运营信息.
 * 数据源: 从商户后台报表中获取, Sass平台运行计划任务,按照Sass系统的结算币种,重新计算,生成本报表.
 * 主要查询条件说明: 
@@ -123,6 +124,7 @@
     - 年报表:每年1月1日号凌晨后,系统运行定时任务(具体时间由技术确定),统计上年1月1号00:00:00~12月31号23:59:59的数据, 定时任务完成后,生成上年的报表数据 .为数据为0 ,则展示0. 
 ## 3.2 费用报表
 ### 3.2.1 商户抽点报表
+![商户抽点报表](https://github.com/Maike0418/SassPictures/blob/main/shcdbb.png)
 * 功能说明: 主要用来按日周月年统计和展示每个商户不同游戏类型盈利的抽点费用.
 * 主要字段说明: 
     - 账单日期: 账单的月份, 精确到年-月. 
@@ -159,6 +161,7 @@
         | 彩票     | TG       | INR      | 34478    | 86.2     | 400     | 30          | 120      |
     - 商户A的月总抽点为: 100+100+20+100+150+120=590 USDT 
 ### 3.2.2 商户预付报表
+![商户预付报表](https://github.com/Maike0418/SassPictures/blob/main/shyfbb.png)
 * 功能说明: 主要用按时段统计和展示每个商户不同游戏类型盈利的抽点费用. 预付需要时时监控商户预付金额是否充足,因此报表频率比较高, 
 * 主要字段说明: 
     - 投注币种:  商户端,会员下注该游戏使用的币种. 多个币种则分别统计.
@@ -192,7 +195,8 @@
         | 彩票     | BBGT-TF       | USDT     | 500      | 1        | 500     | 30          | 150      |
         | 彩票     | BBGT-TF       | INR      | 34478    | 86.2     | 400     | 30          | 120      |
     - 商户A的该时段内抽点为: 100+100+20+100+150+120=590 USDT 
-### 3.2.3 集成商抽点报表 
+### 3.2.3 集成商抽点报表
+![集成商抽点报表](https://github.com/Maike0418/SassPictures/blob/main/jcscdbb.png)
 * 功能说明: 主要用来按日周年月统计上游集成商向我方抽取的月游戏佣金报表
 * 主要字段说明: 
     - 账单日期: 账单的月份, 精确到年-月. 
@@ -229,6 +233,7 @@
         | 彩票     | TG       | INR      | 34478    | 86.2     | 400     | 20          | 80      |
     - AWC商向Sass系统的月总抽点为: 50+50+10+50+100+80= 590 USDT
 ### 3.2.4 集成商预付报表
+![集成商预付报表](https://github.com/Maike0418/SassPictures/blob/main/jcsyfbb.png)
 * 功能说明: 主要用来按时段统计和展示集成商按照不同游戏类型盈利的抽点费用计算并扣减商户预付金额. 预付需要时时监控商户预付金额是否充足,因此报表频率比较高, 
 * 主要字段说明: 
     - 投注币种:  商户端,会员下注该游戏使用的币种. 多个币种则分别统计.
@@ -264,6 +269,7 @@
     - 集成商向商户A的该时段内抽点额(扣减金额)为: 100+100+20+100+150+120=590 USDT 
 ## 3.3 游戏报表
 ### 3.3.1 游戏类型报表
+![游戏类型报表](https://github.com/Maike0418/SassPictures/blob/main/yxlxbb.png)
 * 功能说明: 以游戏类型为维度,按日周月年统计所有商户下的会员在不同游戏类型的下的投注等数据情况
 * 统计数据源: 根据商户后台的游戏类型报表,按照不同游戏类型和商户后台结算币种, 在Sass系统运行计划任务, 根据需求计算生成Sass系统本报表.
 * 主要字段说明:    
@@ -284,6 +290,7 @@
     - 月报表:每月1号凌晨后,系统运行定时任务(具体时间由技术确定),统计上月1号00:00:00~月最后一天23:59:59的数据, 定时任务完成后,生成上月的报表数据 .为数据为0 ,则展示0. 
     - 年报表:每年1月1日号凌晨后,系统运行定时任务(具体时间由技术确定),统计上年1月1号00:00:00~12月31号23:59:59的数据, 定时任务完成后,生成上年的报表数据 .为数据为0 ,则展示0. 
 ### 3.3.2 游戏投注报表
+![游戏投注报表](https://github.com/Maike0418/SassPictures/blob/main/yxtzbb.png)
 * 功能说明: 以投注为维度,统计所有商户下的会员在不同游戏类型的下的投注等数据情况
 * 统计数据源: 根据商户后台的游戏报表,按照商户后台不同的结算币种, 在Sass系统运行计划任务, 根据规则计算Sass系统本报表.
 * 主要字段说明:  
@@ -305,6 +312,7 @@
     - 月报表:每月1号凌晨后,系统运行定时任务(具体时间由技术确定),统计上月1号00:00:00~月最后一天23:59:59的数据, 定时任务完成后,生成上月的报表数据 .为数据为0 ,则展示0. 
     - 年报表:每年1月1日号凌晨后,系统运行定时任务(具体时间由技术确定),统计上年1月1号00:00:00~12月31号23:59:59的数据, 定时任务完成后,生成上年的报表数据 .为数据为0 ,则展示0. 
 ### 3.3.3 游戏厂商报表
+![游戏厂商报表](https://github.com/Maike0418/SassPictures/blob/main/yxcsbb.png)
 * 功能说明: 以游戏厂商为维度,统计所有商户下的会员的投注等数据情况
 * 统计数据源: 根据商户后台的厂家投注报表,按照商户后台不同的结算币种, 在Sass系统运行计划任务, 根据需求生成Sass系统本报表.
 * 主要字段说明:  
@@ -326,6 +334,7 @@
     - 月报表:每月1号凌晨后,系统运行定时任务(具体时间由技术确定),统计上月1号00:00:00~月最后一天23:59:59的数据, 定时任务完成后,生成上月的报表数据 .为数据为0 ,则展示0. 
     - 年报表:每年1月1日号凌晨后,系统运行定时任务(具体时间由技术确定),统计上年1月1号00:00:00~12月31号23:59:59的数据, 定时任务完成后,生成上年的报表数据 .为数据为0 ,则展示0. 
 ### 3.3.4 游戏集成商报表
+![游戏集成商报表](https://github.com/Maike0418/SassPictures/blob/main/jcsbb.png)
 * 功能说明: 以上游集商为维度,统计所有下游商户使用该集成商提供的游戏会员投的投注等数据情况
 * 统计数据源: Sass后台根据厂商报表关联游戏集成商,生成该报表数据.
 * 主要字段说明:  
