--- a/Sass管理系统精简版需求文档20250115V1.0.md
+++ b/Sass管理系统精简版需求文档20250115V1.0.md
@@ -320,6 +320,7 @@
         + 点击编辑,模版名称回填变为可编辑状态, 操作变成保存.编辑逻辑与保存相同.
     - 集成商: 必选项,下拉选择,从集成商管理中获取下拉数据.
         + 点击保存,如果没有选择任何游戏集成商,则提示请选择游戏集成商.
+        + 点击保存，如果游戏集成商已被其他模版选择，则提示该集成商已被绑定，请重新选择。
         + 点击保存,游戏集成商变为不可选择状态.同时列表游戏集成商字段回填已选的游戏集成商名称.
         + 点击编辑,游戏集成商变为可下拉选择状态,回填已有选项,
     - 最低预付款: 选填项,可输入正数字.小数.
