--- a/商户管理后台需求说明.md
+++ b/商户管理后台需求说明.md
@@ -41,11 +41,11 @@
 * 名词定义: 待定
 # 3. 渠道版块
 ## 3.1 渠道管理
-### 3.1.1 渠道管理
-* 功能说明: 本功能主要是用来新增,编辑渠道信息.
+### 3.1.1 三方渠道管理
+* 功能说明: 本功能主要是用来新增,编辑三方渠道信息. 三方渠道主要是用来区分除了公司内部自营渠道以外的其他渠道。
 * 列表的数据来源:从新建获取
 * 列表重要字段说明: 
-    - 渠道ID: 渠道的唯一凭证,不可重复
+    - 渠道ID: 渠道的唯一凭证,不可重复， 字母+4位随机数字生成。
     - 渠道名称: 新建时填写的渠道名称,
     - 类渠道标识: 渠道的标记字段, 不可重复.
     - 渠道状态: 正常, 禁用;
@@ -63,7 +63,34 @@
         + 如果有必填项为空,则在必填项下方提示: xxxx(必填项名称)不能为空.
         + 验证通过,弹窗关闭,更新列表信息.
 * 编辑:  信息回填, 保存逻辑同新增. 
-### 3.1.2 渠道列表
+### 3.1.2 自营渠道管理
+* 功能说明: 本功能主要是用来新增,编辑自营渠道信息. 自营渠道主要是公司内部电销或者推广及销售人员用的渠道。
+* 列表的数据来源:从新建获取
+* 列表重要字段说明: 
+    - 渠道ID: 渠道的唯一凭证,不可重复， 字母+4位随机数字生成。
+    - 渠道名称: 新建时填写的渠道名称,
+    - 类渠道标识: 渠道的标记字段, 不可重复.
+    - 渠道分类： 默认选择自营渠道 
+    - 渠道状态: 正常, 禁用;
+* 列表排序: 根据创建时间倒序排序
+* 新增:
+    -  渠道ID: 默认生成, 不可编辑;
+    -  渠道名称: 必填项, 可输入字母,汉字,数字, 字符等.
+    -  渠道标识: 必填项,可输入字母,汉字,数字, 字符等.
+    -  渠道分类项: 必填项,下拉选择,默认选择自营渠道。
+    -  投放方式: 下拉选择, 选项: SEO推广, 广告, 分销 
+    -  扣量规则:  选填项,单选, 按比例扣量, 按数值扣量
+       + 按比例扣量:   仅限输入 数字, 小数
+       + 按数值扣量: 仅限输入正整数数字.
+    - 点击保存
+        + 如果有必填项为空,则在必填项下方提示: xxxx(必填项名称)不能为空.
+        + 验证通过,弹窗关闭,更新列表信息.
+* 编辑:  信息回填, 保存逻辑同新增.
+* 推广码： 
+   + 点击后查看该渠道对外的 邀请码，邀请链接地址， 邀请二维码信息。 点击复制， 将该信息复制到剪贴板。 
+* 渠道和人员关联： 
+   + 在系统管理，用户管理中，用户增加身份项，如果身份
+### 3.1.3 渠道列表
 * 功能说明: 本功能主要是用来查看渠道信息和数据转化率信息
 * 列表重要字段说明: 
     - 渠道ID: 渠道的唯一凭证,不可重复
@@ -74,7 +101,7 @@
     - 注册转化率: (总注册数÷总点击数)*100%
     - 充值转化率:(总充值人数÷总注册人数)*100%
 * 列表排序: 根据更新时间,倒序排序;
-### 3.1.2 渠道会员
+### 3.1.4 渠道会员
 * 功能说明: 本功能主要是用来查看渠道的会员ID 账号信息, 点击时间,注册时间信息
 * 列表重要字段说明: 
     - 会员ID:  会员的唯一凭证,从会员列表中获取.
@@ -82,7 +109,7 @@
     - 点击时间: 未注册前通过该渠道推广地址点击到平台注册或者首页页面的时间.
     - 注册时间: 用户通过该渠道推广的地址点击到平台首页或者注册页面并注册的时间. 
    * 列表排序: 根据注册时间,倒序排序;
-### 3.1.2 渠道分类
+### 3.1.5 渠道分类
 * 功能说明: 本功能主要是用来新建编辑渠道类别
 * 列表重要字段说明: 
     - 分类ID: 分类唯一凭证,不可重复
