--- a/商户管理后台需求说明.md
+++ b/商户管理后台需求说明.md
@@ -89,7 +89,7 @@
 * 推广码： 
    + 点击后查看该渠道对外的 邀请码，邀请链接地址， 邀请二维码信息。 点击复制， 将该信息复制到剪贴板。 
 * 渠道和人员关联： 
-   + 在系统管理，用户管理中，用户增加身份项，如果身份
+   + 在系统管理，用户管理中，用户增加身份项，如果身份为(约定好)销售，则增加标识，该标识将关联到自营渠道。
 ### 3.1.3 渠道列表
 * 功能说明: 本功能主要是用来查看渠道信息和数据转化率信息
 * 列表重要字段说明: 
