--- a/商户管理后台需求说明.md
+++ b/商户管理后台需求说明.md
@@ -11,8 +11,6 @@
 *  商户管理后台主要用来给商户使用,用来会员管理,充值提现,游戏管理,活动管理,优惠管理等.
 *  基于商户的信息,为Sass系统的优迭代提供支撑,同时为后续运营业务发展方向提供支持 
 ## 2.2 通用需求说明
-* 原型地址:https://5owod3.axshare.com/?code=b34d0bc16f16356c67ffc3290577c15e&id=jd7s1b&g=14
-* 文档地址:https://github.com/Maike0418/-/blob/main/17363272849684.md
 * 系统所有的列表字段及查询条件参见原型,本文档中不一一列举,本文档只对重点字段进行说明,对功能进行逻辑说明;
 * 原型中所有的红色边框输入框,或者字段名称前有<a style="color: red;"> * </a> 表示为必填项;
 * 原型中所有输入框如果背景为灰色,则表示该输入框不可编辑;
@@ -70,7 +68,8 @@
     - 渠道ID: 渠道的唯一凭证,不可重复， 字母+4位随机数字生成。
     - 渠道名称: 新建时填写的渠道名称,
     - 类渠道标识: 渠道的标记字段, 不可重复.
-    - 渠道分类： 默认选择自营渠道 
+    - 渠道分类： 默认选择自营渠道
+    - 投放方式： 默认选择自营推广。 
     - 渠道状态: 正常, 禁用;
 * 列表排序: 根据创建时间倒序排序
 * 新增:
@@ -78,7 +77,7 @@
     -  渠道名称: 必填项, 可输入字母,汉字,数字, 字符等.
     -  渠道标识: 必填项,可输入字母,汉字,数字, 字符等.
     -  渠道分类项: 必填项,下拉选择,默认选择自营渠道。
-    -  投放方式: 下拉选择, 选项: SEO推广, 广告, 分销 
+    -  投放方式: 下拉选择, 选项: 自营推广(默认选择)，SEO推广, 广告, 分销 
     -  扣量规则:  选填项,单选, 按比例扣量, 按数值扣量
        + 按比例扣量:   仅限输入 数字, 小数
        + 按数值扣量: 仅限输入正整数数字.
