--- a/商户管理后台需求说明.md
+++ b/商户管理后台需求说明.md
@@ -177,7 +177,7 @@
 * 注册量环比,注册转化率, 转化率环比 计算示例: 
     - 如 渠道A 标识B  2025-02-13 的点击量是 500  注册量是 10 
     - 如 渠道A 标识B  2025-02-14 到点击量是 1000   注册量是 50
-    - 则2025-02-14相比02-13环比就是:{(1000-500)/1000}*100%= 50% 
+    - 则2025-02-14相比02-13注册量环比就是:{(1000-500)/1000}*100% =50% 
     - 渠道A 02-03的注册转化率:(10/500)*100%=2% ;
     - 渠道A 02-04的注册转化率:(50/1000)*100%=5% ;
     - 02-04相比02-03 注册转化率环比: {(5%-2%)/2%}*100%= 150% ;  
@@ -225,7 +225,7 @@
   + 会员投注额: 统计时段内该渠道的所有有效投注单的下注金额之和;
   + 会员中奖金额:统计时段内该渠道的所有有效投注单的中奖金额之和;
   + 盈利: 投注额-中奖额,  为正 表示渠道盈利, 用绿色字体展示, 为负,表示渠道亏损,用红色字体表示,且带负号 - ;
-  + RTP(%): 会员的RTP值 ,计算规则:(会员中奖金额/投注金额)*100
+  + RTP(%): 会员的RTP值 ,计算规则:(会员中奖金额/投注金额)*100%
 * 列表排序: 以渠道标识为最小单位,按照生成时间,倒序排序. 
 * 数据报表生成规则:
     - 日报表:次日凌晨后,系统运行定时任务(具体时间由技术确定),统计前一天00:00:00~23:59:59的数据, 定时任务完成后, 生成前一日的报表数据, 同时计算更新 本周 本月 本年 报表.  如果为数据0 ,则展示 0 .  
@@ -279,10 +279,10 @@
   + 充值人数: 统计周期内,通过该渠道推广链接跳转并在平台注册的会员,并进行充值成功的会员数;
   + 注册转化率:统计范围内(注册人数/访问次数)*100%
   + 充值转化率:统计范围内(充值人数/注册人数)*100%
-  + 币种: 平台的法币币种
-  + 人均充值金额: 统计范围内(总充值金额/总充值人数)*1000%
-  + 人均下注金额: 统计范围内(总有效下注金额/总下注人数)*1000%
-  + 平均注单盈利:统计范围内(盈利额/有效注单数)*100%   
+  + 币种: 平台的结算币种
+  + 人均充值金额: 统计范围内(总充值金额/总充值人数)
+  + 人均下注金额: 统计范围内(总有效下注金额/总下注人数)
+  + 平均注单盈利:统计范围内(盈利额/有效注单数)
 * 列表排序: 以渠道标识为最小单位,按照生成时间,倒序排序. 
 * 数据报表生成规则:
     - 日报表:次日凌晨后,系统运行定时任务(具体时间由技术确定),统计前一天00:00:00~23:59:59的数据, 定时任务完成后, 生成前一日的报表数据, 同时计算更新 本周 本月 本年 报表.  如果为数据0 ,则展示 0 .  
