--- a/商户管理后台需求说明.md
+++ b/商户管理后台需求说明.md
@@ -1,4 +1,4 @@
-# 商户管理后台需求说明
+# 商户管理后台需求说明 V1.1
 # 1. 引言
 ## 1.1 目的
 * 本需求说明书旨在详细描述商户管理后台中各个版块的功能要求和使用操作逻辑，为开发、测试和相关人员提供明确的指导。
@@ -108,27 +108,110 @@
     - 充值转化率:(总充值人数÷总注册人数)*100%
 * 列表排序: 根据更新时间,倒序排序;
 ### 3.1.4 渠道会员
-* 功能说明: 本功能主要是用来查看渠道的会员ID 账号信息, 点击时间,注册时间信息
+* 功能说明: 本功能主要是用来查看渠道的会员ID 账号信息, 点击时间,注册时间信息，同时可对会员的渠道变更，批量迁移，变更。
 * 列表重要字段说明: 
-    - 会员ID:  会员的唯一凭证,从会员列表中获取.
+    - 会员ID:  会员的唯一凭证,从会员列表中获取. 如果一个会员存在于多个渠道中，则展示多条；
     - 会员昵称: 会员在平台的注册用户名,从会员列表中获取.
     - 点击时间: 未注册前通过该渠道推广地址点击到平台注册或者首页页面的时间.
     - 注册时间: 用户通过该渠道推广的地址点击到平台首页或者注册页面并注册的时间. 
-   * 列表排序: 根据注册时间,倒序排序;
+* 列表排序: 根据注册时间,倒序排序;
+* 渠道新增会员： 
+    + 渠道ID：必选项，下拉选择，单选，从渠道列表中获取下拉想，首行可根据关键字检索ID。
+    + 请输入会员ID： 必填项，仅限输入字母，数字，常规符号。
+    + 点击保存：
+        - 如果渠道ID为空，则提示请选择渠道ID。
+        - 如果会员ID为空，则提示请输入会员ID。
+        - 如果会员ID格式不正确，则提示，会员ID格式错误。
+        - 如果会员ID未匹配到已注册的会员，则提示，会员ID不存在。
+        - 如果会员ID已有渠道，则提示会员ID已有渠道，请通过变更渠道处理。 
+        - 如果输入多个会员ID，判断逻辑与以上两点相同，即按照检测出的第一个错误给出提示。 
+        -  验证通过，弹窗关闭，将该会员添加到渠道会员列表中。
+* 渠道迁移：
+    + 原渠道ID：必选项，下拉选择，单选，从渠道列表中获取下拉想，首行可根据关键字检索ID。
+    + 迁移的渠道ID：必选项，下拉选择，单选，从渠道列表中获取下拉想，首行可根据关键字检索ID。
+    + 登录密码：当前操作者的登录密码；
+    + 温馨提示： 务必确认信息无误，保存后，原渠道的所有会员数据将迁移到新的渠道ID ；
+    + 点击保存：
+        - 如果原渠道ID为空，则提示，原渠道ID不能为空；
+        - 如果迁移的渠道ID为空，则提示，迁移的渠道ID不能为空。
+        - 如果原渠道ID和迁移的渠道ID一样，则提示，原渠道ID和迁移的渠道ID相同，请从新选择。
+        - 登录密码错误：提示，登录密码错误，请重新输入；
+            - 验证通过，关闭弹窗，将原渠道ID下的所有会员变更到迁移后的渠道ID下。原渠道下会员信息清空；
+* 批量变更渠道： 
+    + 如果没有选择任何数据，则提示请至少选择一条数据；
+    + 当选择一个或者多条数据后，点击渠道变更，弹出批量渠道变更弹窗。
+        -  变更渠道 ：必选项，下拉选择，从渠道列表中获取渠道ID信息，首行可搜索渠道ID。可多选。 
+    + 点击保存： 
+        - 如果未选择变更渠道ID， 则提示请选择变更渠道ID。
+        - 保存成功，更新列表， 更新后，如果该会员只有一个渠道，则从该列表中删除数据，
+        - 保存成功， 更新类别， 更新后，如果该会员仍有多个渠道，则展示更新后的渠道信息，同时更新时间。
+    * 变更渠道：
+     + 功能说明：针对单一会员的渠道变更。
+     + 点击后，回填会员ID，当前所属渠道信息， 不可编辑。
+     + 变更渠道 ：必选项，下拉选择，从渠道列表中获取渠道ID信息，首行可搜索渠道ID。可多选。 
+     + 点击保存： 
+        - 如果未选择变更渠道ID， 则提示请选择变更渠道ID。
+        - 保存成功，更新列表， 更新后，如果该会员只有一个渠道，则从该列表中删除数据，
+        - 保存成功， 更新类别， 更新后，如果该会员有多个渠道，则展示更新后的渠道信息，同时更新时间。
 ### 3.1.5 渠道分类
 * 功能说明: 本功能主要是用来新建编辑渠道类别
 * 列表重要字段说明: 
-    - 分类ID: 分类唯一凭证,不可重复
+    - 分类ID: 分类唯一凭证,不可重复, 系统自动生成
     - 渠道分类:分类的名称
 * 列表排序: 根据创建时间,倒序排序;
 * 新增: 
-    - 分类ID: 必填项, 可输入字母,数字,常规符号
+    - 分类ID: 必填项, 系统自动生成，可输入字母,数字,常规符号
     - 分类名称: 必填项, 可输入字母,数字,汉字,常规符号.
     - 点击保存:
       + 如果必填项为空, 则提示xxx(必填项)不能为空
       + 如果分类ID格式错误,则提示,分类ID格式错误,请从新输入.
       + 验证通过,关闭弹窗,更新列表信息.
 * 编辑: 信息回填,保存判断同新增逻辑.
+### 3.1.6 渠道账号导入
+* 功能说明： 本功能主要是通过文件给渠道导入电话号码，后期当该电话号码注册后，绑定到该渠道下。
+* 选择渠道ID：必填项，下拉单选，从渠道列表中获取渠道ID， 首行可输入查询条件，检索渠道ID ；
+* 请上传文件： 必填项， 可上传 excel 格式， cvs 格式，txt ，三种常见数据文件格式。如果为其他文件格式类型，则提示，文件类型错误，无法上传。
+* 导入：
+    + 点击后，执行导入事件，将数据导入到渠道中，
+    + 导入完成后，显示 本次共导入xxxx条数据，成功 xxx 条， 失败 xx 条。
+    + 清除已上传的文件。 
+    + 导入后的数据在渠道账号列表中查看 
+* 删除： 
+    + 点击后，删除已上传的文件，
+    + 在导入过程中，删除按钮不可用。
+### 3.1.7 渠道账号列表
+* 功能说明： 用来记录渠道导入的账号，和该账号是否已经注册为会员的信息。
+* 列表排序： 按照导入时间倒序排序
+* 主要字段说明： 
+    + 导入的账号： 通过导入功能给渠道导入的手机号码，或者邮箱账号等信息。
+    + 账号是否已注册： 
+        - 是： 会员注册时，使用的手机号码或者邮箱信息与导入的账号一致，则认为该账号已注册，同时将会员划分到该渠道。
+        - 否： 该账号尚未在商户注册。
+    + 会员ID： 该账号注册后对应的会员ID信息，如果未注册，则ID信息为空；
+    + 注册时间： 账号的注册时间，如果账号未被注册，则注册时间为空。  
+### 3.1.8 会员多渠道筛查
+* 功能说明： 查询一个会员同时存在于多个渠道，并对会员从新进行渠道绑定。
+* 列表排序：按照更新时间倒序排序；
+* 主要字段说明：
+    + 所属渠道数： 如果会员ID存在于 含2个 及以上的渠道 则统计会员的所属渠道数。
+    + 渠道ID：展示会员所在的多个渠道ID， 
+    + 更新时间： 数据的产生时间，或者变更时间，
+* 批量变更渠道： 
+    + 如果没有选择任何数据，则提示请至少选择一条数据；
+    + 当选择一个或者多条数据后，点击渠道变更，弹出批量渠道变更弹窗。
+        -  变更渠道 ：必选项，下拉选择，从渠道列表中获取渠道ID信息，首行可搜索渠道ID。可多选。 
+    + 点击保存： 
+        - 如果未选择变更渠道ID， 则提示请选择变更渠道ID。
+        - 保存成功，更新列表， 更新后，如果该会员只有一个渠道，则从该列表中删除数据，
+        - 保存成功， 更新类别， 更新后，如果该会员仍有多个渠道，则展示更新后的渠道信息，同时更新时间。
+    * 变更渠道：
+     + 功能说明：针对单一会员的渠道变更。
+     + 点击后，回填会员ID，当前所属渠道信息， 不可编辑。
+     + 变更渠道 ：必选项，下拉选择，从渠道列表中获取渠道ID信息，首行可搜索渠道ID。可多选。 
+     + 点击保存： 
+        - 如果未选择变更渠道ID， 则提示请选择变更渠道ID。
+        - 保存成功，更新列表， 更新后，如果该会员只有一个渠道，则从该列表中删除数据，并更新三方或者自营渠道管理数据统计信息。
+        - 保存成功， 更新类别， 更新后，如果该会员有多个渠道，则展示更新后的渠道信息，同时更新时间。并更新三方或者自营渠道管理数据统计信息。
 ## 3.2 渠道数据
 ### 3.2.1 渠道点击数据
 * 功能说明: 按照所选时段统计渠道的点击数量,环比变化数据.
@@ -177,7 +260,7 @@
 * 注册量环比,注册转化率, 转化率环比 计算示例: 
     - 如 渠道A 标识B  2025-02-13 的点击量是 500  注册量是 10 
     - 如 渠道A 标识B  2025-02-14 到点击量是 1000   注册量是 50
-    - 则2025-02-14相比02-13注册量环比就是:{(1000-500)/1000}*100% =50% 
+    - 则2025-02-14相比02-13环比就是:{(1000-500)/1000}*100%= 50% 
     - 渠道A 02-03的注册转化率:(10/500)*100%=2% ;
     - 渠道A 02-04的注册转化率:(50/1000)*100%=5% ;
     - 02-04相比02-03 注册转化率环比: {(5%-2%)/2%}*100%= 150% ;  
@@ -225,7 +308,7 @@
   + 会员投注额: 统计时段内该渠道的所有有效投注单的下注金额之和;
   + 会员中奖金额:统计时段内该渠道的所有有效投注单的中奖金额之和;
   + 盈利: 投注额-中奖额,  为正 表示渠道盈利, 用绿色字体展示, 为负,表示渠道亏损,用红色字体表示,且带负号 - ;
-  + RTP(%): 会员的RTP值 ,计算规则:(会员中奖金额/投注金额)*100%
+  + RTP(%): 会员的RTP值 ,计算规则:(会员中奖金额/投注金额)*100
 * 列表排序: 以渠道标识为最小单位,按照生成时间,倒序排序. 
 * 数据报表生成规则:
     - 日报表:次日凌晨后,系统运行定时任务(具体时间由技术确定),统计前一天00:00:00~23:59:59的数据, 定时任务完成后, 生成前一日的报表数据, 同时计算更新 本周 本月 本年 报表.  如果为数据0 ,则展示 0 .  
@@ -279,10 +362,10 @@
   + 充值人数: 统计周期内,通过该渠道推广链接跳转并在平台注册的会员,并进行充值成功的会员数;
   + 注册转化率:统计范围内(注册人数/访问次数)*100%
   + 充值转化率:统计范围内(充值人数/注册人数)*100%
-  + 币种: 平台的结算币种
+  + 币种: 平台的法币币种
   + 人均充值金额: 统计范围内(总充值金额/总充值人数)
   + 人均下注金额: 统计范围内(总有效下注金额/总下注人数)
-  + 平均注单盈利:统计范围内(盈利额/有效注单数)
+  + 平均注单盈利:统计范围内(盈利额/有效注单数)  
 * 列表排序: 以渠道标识为最小单位,按照生成时间,倒序排序. 
 * 数据报表生成规则:
     - 日报表:次日凌晨后,系统运行定时任务(具体时间由技术确定),统计前一天00:00:00~23:59:59的数据, 定时任务完成后, 生成前一日的报表数据, 同时计算更新 本周 本月 本年 报表.  如果为数据0 ,则展示 0 .  
