--- a/商户管理后台需求说明.md
+++ b/商户管理后台需求说明.md
@@ -167,19 +167,7 @@
       + 如果分类ID格式错误,则提示,分类ID格式错误,请从新输入.
       + 验证通过,关闭弹窗,更新列表信息.
 * 编辑: 信息回填,保存判断同新增逻辑.
-### 3.1.6 渠道账号导入
-* 功能说明： 本功能主要是通过文件给渠道导入电话号码，后期当该电话号码注册后，绑定到该渠道下。
-* 选择渠道ID：必填项，下拉单选，从渠道列表中获取渠道ID， 首行可输入查询条件，检索渠道ID ；
-* 请上传文件： 必填项， 可上传 excel 格式， cvs 格式，txt ，三种常见数据文件格式。如果为其他文件格式类型，则提示，文件类型错误，无法上传。
-* 导入：
-    + 点击后，执行导入事件，将数据导入到渠道中，
-    + 导入完成后，显示 本次共导入xxxx条数据，成功 xxx 条， 失败 xx 条。
-    + 清除已上传的文件。 
-    + 导入后的数据在渠道账号列表中查看 
-* 删除： 
-    + 点击后，删除已上传的文件，
-    + 在导入过程中，删除按钮不可用。
-### 3.1.7 渠道账号列表
+### 3.1.6 渠道账号列表
 * 功能说明： 用来记录渠道导入的账号，和该账号是否已经注册为会员的信息。
 * 列表排序： 按照导入时间倒序排序
 * 主要字段说明： 
@@ -189,7 +177,26 @@
         - 否： 该账号尚未在商户注册。
     + 会员ID： 该账号注册后对应的会员ID信息，如果未注册，则ID信息为空；
     + 注册时间： 账号的注册时间，如果账号未被注册，则注册时间为空。  
-### 3.1.8 会员多渠道筛查
+* 渠道账号导入
+    + 功能说明： 本功能主要是通过文件给渠道导入电话号码，后期当该电话号码注册后，绑定到该渠道下。
+    + 选择渠道ID：必填项，下拉单选，从渠道列表中获取渠道ID， 首行可输入查询条件，检索渠道ID ；
+    + 请上传文件： 必填项， 可上传 excel 格式， cvs 格式，txt ，三种常见数据文件格式。如果为其他文件格式类型，则提示，文件类型错误，无法上传。
+    + 导入：
+       -  点击后，执行导入事件，将数据导入到渠道中，
+       -  导入完成后，显示 本次共导入xxxx条数据，成功 xxx 条， 失败 xx 条。在下方生成导入记录
+       -  清除已上传的文件。 
+       -  导入后的数据在渠道账号列表中查看 
+     + 删除： 
+       -  点击后，删除已上传的文件，
+       -  在导入过程中，删除按钮不可用。
+    + 导入记录： 只记录最近10次的导入记录
+       - 按照导入成功时间倒序排序
+       - 文件名： 导入文件的名称和后缀。
+       - 导入信息： 统计本次导入的 条数，成功条数， 失败条数。
+       - 时间： 导入成功的时间
+       - 操作人： 本次导入的操作人；
+      
+### 3.1.7 会员多渠道筛查
 * 功能说明： 查询一个会员同时存在于多个渠道，并对会员从新进行渠道绑定。
 * 列表排序：按照更新时间倒序排序；
 * 主要字段说明：
