--- a/商户管理后台需求说明.md
+++ b/商户管理后台需求说明.md
@@ -169,6 +169,8 @@
 * 编辑: 信息回填,保存判断同新增逻辑.
 ### 3.1.6 渠道账号列表
 * 功能说明： 用来记录渠道导入的账号，和该账号是否已经注册为会员的信息。
+* 会员多渠道产生场景：导入的 账号属于 渠道 A 或 C， 后期该账号通过 渠道B 注册，则该会员同时存在于 A B C 三个渠道下。 
+* 如果导入时 ，该会员账号已注册，且在渠道 B下，则导入后如果 渠道 A 或者 C 有该账号，则只算为渠道B，
 * 列表排序： 按照导入时间倒序排序
 * 主要字段说明： 
     + 导入的账号： 通过导入功能给渠道导入的手机号码，或者邮箱账号等信息。
@@ -198,6 +200,8 @@
       
 ### 3.1.7 会员多渠道筛查
 * 功能说明： 查询一个会员同时存在于多个渠道，并对会员从新进行渠道绑定。
+* 会员多渠道产生场景：导入的 账号属于 渠道 A 或 C， 后期该账号通过 渠道B 注册，则该会员同时存在于 A B C 三个渠道下。 
+* 如果导入时 ，该会员账号已注册，且在渠道 B下，则导入后如果 渠道 A 或者 C 有该账号，则只算为渠道B，
 * 列表排序：按照更新时间倒序排序；
 * 主要字段说明：
     + 所属渠道数： 如果会员ID存在于 含2个 及以上的渠道 则统计会员的所属渠道数。
