--- a/商户管理后台需求说明.md
+++ b/商户管理后台需求说明.md
@@ -116,7 +116,7 @@
     - 注册时间: 用户通过该渠道推广的地址点击到平台首页或者注册页面并注册的时间. 
 * 列表排序: 根据注册时间,倒序排序;
 * 渠道新增会员： 
-    + 渠道ID：必选项，下拉选择，单选，从渠道列表中获取下拉想，首行可根据关键字检索ID。
+    + 渠道ID：必选项，下拉选择，单选，从渠道列表中获取下拉项，首行可根据关键字检索渠道ID。
     + 请输入会员ID： 必填项，仅限输入字母，数字，常规符号。
     + 点击保存：
         - 如果渠道ID为空，则提示请选择渠道ID。
