--- a/商户管理后台需求说明.md
+++ b/商户管理后台需求说明.md
@@ -127,8 +127,8 @@
         - 如果输入多个会员ID，判断逻辑与以上两点相同，即按照检测出的第一个错误给出提示。 
         -  验证通过，弹窗关闭，将该会员添加到渠道会员列表中。
 * 渠道迁移：
-    + 原渠道ID：必选项，下拉选择，单选，从渠道列表中获取下拉想，首行可根据关键字检索ID。
-    + 迁移的渠道ID：必选项，下拉选择，单选，从渠道列表中获取下拉想，首行可根据关键字检索ID。
+    + 原渠道ID：必选项，下拉选择，单选，仅限从自营渠道列表中获取下拉项，首行可根据关键字检索ID。
+    + 迁移的渠道ID：必选项，下拉选择，单选，仅限从自营渠道列表中获取下拉项，首行可根据关键字检索ID。
     + 登录密码：当前操作者的登录密码；
     + 温馨提示： 务必确认信息无误，保存后，原渠道的所有会员数据将迁移到新的渠道ID ；
     + 点击保存：
@@ -136,7 +136,9 @@
         - 如果迁移的渠道ID为空，则提示，迁移的渠道ID不能为空。
         - 如果原渠道ID和迁移的渠道ID一样，则提示，原渠道ID和迁移的渠道ID相同，请从新选择。
         - 登录密码错误：提示，登录密码错误，请重新输入；
-            - 验证通过，关闭弹窗，将原渠道ID下的所有会员变更到迁移后的渠道ID下。原渠道下会员信息清空；
+        - 验证通过，关闭弹窗，将原渠道ID下的所有会员变更到迁移后的渠道ID下。原渠道下会员信息清空；
+        - 迁移后，会员产生的投注，体现，充值等数据算做迁移后的渠道ID。
+        - 迁移后，新渠道ID 所属会员数量变化， 并按照新的关系统计数据。
 * 批量变更渠道： 
     + 如果没有选择任何数据，则提示请至少选择一条数据；
     + 当选择一个或者多条数据后，点击渠道变更，弹出批量渠道变更弹窗。
