--- a/商户管理后台需求说明.md
+++ b/商户管理后台需求说明.md
@@ -199,6 +199,9 @@
        - 导入信息： 统计本次导入的 条数，成功条数， 失败条数。
        - 时间： 导入成功的时间
        - 操作人： 本次导入的操作人；
+* 会员匹配
+    + 点击后，将账号是否已注册状态为否的账号从新与会员表做匹配查询，如果匹配成功则更改注册状态，和会员ID。
+    + 匹配时，区号根据会员区号表中的 1位 或2位 或者3位 轮询匹配查询，以首次匹配成功的为准。
       
 ### 3.1.7 会员多渠道筛查
 * 功能说明： 查询一个会员同时存在于多个渠道，并对会员从新进行渠道绑定。
